--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>Slaught Webgame</title>
+    <title>Slaugh Webgame</title>
   </head>
   <body>
     <div id="root"></div>
   </body>
+  <script src="/socket.io/socket.io.js"></script>
 </html>
